--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ node_modules
 /.pnp
 .pnp.js
 
+#bundle files:
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
+
 # testing
 /coverage
 
