--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "enzyme-to-json": "^3.0.1",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
@@ -38,14 +39,16 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "jest": "^20.0.4",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "start": "node server/server.js"
   },
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "serve": "live-server public/",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "author": "me",
   "license": "ISC"
