--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "xpensify",
   "version": "0.0.1",
   "description": "track your expenses",
+  "engines": {
+    "node": "11.11.0"
+  },
   "main": "index.js",
   "dependencies": {
     "babel-core": "^6.25.0",
