updates npm version

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "track your expenses",
   "engines": {
-    "node": "11.11.0"
+    "node": "11.11.0",
+    "npm": "6.7.0"
   },
   "main": "index.js",
   "dependencies": {
