--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "jest": "^20.0.4",
-    "live-server": "^1.2.1",
-    "start": "node server/server.js"
+    "live-server": "^1.2.1"
   },
   "scripts": {
     "build:dev": "webpack",
@@ -52,7 +51,8 @@
     "serve": "live-server public/",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "heroku-postbuild": "yarn run build:prod"
+    "heroku-postbuild": "yarn run build:prod",
+    "start": "node server/server.js"
   },
   "author": "me",
   "license": "ISC"
