--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "serve": "live-server public/",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "heroku-postbuild": "yarn run build:prod",
+    "heroku-postbuild": "npm run build:prod",
     "start": "node server/server.js"
   },
   "author": "me",
