--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,8 @@ node_modules
 /.pnp
 .pnp.js
 
-#bundle files:
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+#bundled files:
+public/dist/
 
 # testing
 /coverage
